# todo-cli-app

./: .gitignore  README.md  pyproject.toml  tasks.json
.gemini/Skills/: PhaseI.ConsoleTodo.md  PreCodingChecklist.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
history/prompts/1-console-todo-app/: 1-create-specification-for-console-todo-app.spec.prompt.md  2-clarify-console-todo-app-specification.spec.prompt.md  3-technical-plan-for-console-todo-app.plan.prompt.md
history/prompts/constitution/: 1-establish-project-constitution-for-todo-app.constitution.prompt.md
specs/1-console-todo-app/: cli-commands.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-console-todo-app/checklists/: requirements.md
src/cli/: main.py
src/models/: task.py
src/services/: task_service.py
tests/unit/: test_task_model.py
