[project]
name = "console-todo-app"
version = "0.1.0"
description = "Phase I Console Todo App for Hackathon II"
dependencies = [
    "pytest>=7.0",
    "flake8>=6.0",
    "black>=23.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.flake8]
max-line-length = 88
exclude = ['.git', '__pycache__', 'venv', '.venv']